--- a/BackendNodeServer/FRONT/TEMPLATES/partials/modal.handlebars
+++ b/BackendNodeServer/FRONT/TEMPLATES/partials/modal.handlebars
@@ -1,6 +1,6 @@
 <!-- Modal Anfang -->
     <div id="loginModal" class="login-modal">
-        <form class="modal-content animate" action="/login">
+        <form class="modal-content animate" action="/user">
             <div class="modal-content-container">
                 <span id="closeModal" class="close-modal">&times;</span>
                 <label for="username">Benutzername</label>
