--- a/BackendNodeServer/FRONT/TEMPLATES/user.handlebars
+++ b/BackendNodeServer/FRONT/TEMPLATES/user.handlebars
@@ -11,9 +11,7 @@
             </ul>
         </nav>
         <div class="login-container">
-            <a href="/">
-            <button class="login-button">Logout</button>
-            </a>
+            <a class="login-button" href="/"> Logout </a>
         </div>
 </header>
 <main>
@@ -21,7 +19,7 @@
     <div class="page-content">
         <div class="content">
             <h1> Willkommen bei READY 4 STAGE NUTZER XY </h1>
-            <p>Hier stehen deine Konto Informationen usw. blablablablablablablablablablablablablablablablablablablablablablablablablablablablablablablablablablablabla
+            <p>Hier stehen deine Konto Informationen usw. blablablablablablabla blablablablablablabla blablablablab lablablablabla blablablablablab lablablabla blablablabla
             </p>
         </div>
         <a id="courses"></a>
